--- a/src/assets/templates/manifest.json
+++ b/src/assets/templates/manifest.json
@@ -3,14 +3,14 @@
     "short_name": "<APP_NAME_CAMELIZED>",
     "start_url": "./",
     "display": "standalone",
+    "orientation": "<APP_ORIENTATION>",
     "theme_color": "<APP_THEME_COLOR>",
     "background_color": "<APP_BG_COLOR>",
     "icons": [
         {
             "src": "./images/icons-192.png",
             "type": "image/png",
-            "sizes": "192x192",
-            "purpose": "any maskable"
+            "sizes": "192x192"
         },
         {
             "src": "./images/icons-512.png",
