--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,7 @@ name = "pwa_shell_generator"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-image = "0.23.14"
 clap = "2.33.3"
+image = "0.23.14"
+regex = "1.5.4"
